--- a/_config.yml
+++ b/_config.yml
@@ -12,7 +12,7 @@ safe: true
 
 # edit here to achieve your personal greatness
 url: http://mouseonthekey.github.io/
-baseurl: http://mouseonthekey.github.io/
+#baseurl: http://mouseonthekey.github.io/
 title: Nenad Bubalo
 author: Nenad Bubalo
 description: Personal blog and resume
