--- a/_config.yml
+++ b/_config.yml
@@ -27,7 +27,7 @@ lastfm: MouseOnTheKeyz
 xing: Nenad_Bubalo
 stackoverflow: users/11832202/mouse-on-the-keys   #e.g: users/2735833/proton1h1
 #Comment out if you don't want disqus
-disqus: nenad_bubalo
+disqus: mouseonthekeys
 # google_analytics: UA-69391421-1
 
 
