--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,7 @@ safe: true
 
 
 # edit here to achieve your personal greatness
-url: http://mouseonthekey.github.io/
+url: https://mouseonthekeys.github.io/
 #baseurl: http://mouseonthekey.github.io/
 title: Nenad Bubalo
 author: Nenad Bubalo
