--- a/_config.yml
+++ b/_config.yml
@@ -10,6 +10,8 @@ plugins: [jekyll-paginate]
 port: 3000
 safe: true
 
+name: Mouse On The Keys - Nenad Bubalo Blog's Name
+description: A description for your blog
 
 # edit here to achieve your personal greatness
 url: https://mouseonthekeys.github.io/
