--- a/_config.yml
+++ b/_config.yml
@@ -12,7 +12,7 @@ safe: true
 
 name: Mouse On The Keys - Nenad Bubalo Blog's Name
 description: A description for your blog
-
+url: https://mouseonthekeys.github.io/
 # edit here to achieve your personal greatness
 url: https://mouseonthekeys.github.io/
 #baseurl: http://mouseonthekeys.github.io/
