--- a/_config.yml
+++ b/_config.yml
@@ -6,12 +6,13 @@ extensions: [smart]
 permalink: /:title.html
 paginate: 5
 plugins: [jekyll-paginate]
+ - jekyll-seo-tag
 gems:
  - jekyll-feed
 port: 3000
 safe: true
 
-name: Nenad Bubalo - Mouse On The Keys Blog`s  
+name: Nenad Bubalo - Mouse On The Keys Blog`s
 description: A description for your blog
 url: https://mouseonthekeys.github.io/
 # edit here to achieve your personal greatness
