--- a/_config.yml
+++ b/_config.yml
@@ -24,7 +24,7 @@ description: Personal blog and resume
 avatar: slika.png
 email: nenad.bubalo@mail.com
 facebook: nenad.bubalo
-github: mouseonthekey # username
+github: mouseonthekeys # username
 instagram: grumpyraccoon
 lastfm: MouseOnTheKeyz
 #twitter: username
