--- a/_config.yml
+++ b/_config.yml
@@ -27,8 +27,10 @@ facebook: nenad.bubalo
 github: mouseonthekeys # username
 instagram: grumpyraccoon
 lastfm: MouseOnTheKeyz
+dev: mouseonthekeys
 #twitter: username
 #linkedin: username
+
 xing: Nenad_Bubalo
 stackoverflow: users/11832202/mouse-on-the-keys   #e.g: users/2735833/proton1h1
 #Comment out if you don't want disqus
