--- a/_config.yml
+++ b/_config.yml
@@ -27,7 +27,7 @@ facebook: nenad.bubalo
 github: mouseonthekeys # username
 instagram: grumpyraccoon
 lastfm: MouseOnTheKeyz
-dev: mouseonthekeys
+#dev: mouseonthekeys
 #twitter: username
 #linkedin: username
 
