--- a/_config.yml
+++ b/_config.yml
@@ -14,10 +14,10 @@ safe: true
 
 name: Nenad Bubalo - Mouse On The Keys Blog`s
 description: A description for your blog
-url: https://mouseonthekeys.github.io/mouse//
+url: https://mouseonthekeys.github.io/mouse/
 # edit here to achieve your personal greatness
 
-baseurl: /mouse//
+baseurl: /mouse/
 title: Nenad Bubalo
 author: Nenad Bubalo
 description: Personal blog and resume
