--- a/_config.yml
+++ b/_config.yml
@@ -16,7 +16,7 @@ name: Nenad Bubalo - Mouse On The Keys Blog`s
 description: A description for your blog
 url: https://mouseonthekeys.github.io/mouse/
 # edit here to achieve your personal greatness
-
+# napisati nesto da se razlikuje
 baseurl: /mouse/
 title: Nenad Bubalo
 author: Nenad Bubalo
