--- a/_config.yml
+++ b/_config.yml
@@ -14,7 +14,7 @@ safe: true
 
 name: Nenad Bubalo - Mouse On The Keys Blog`s
 description: A description for your blog
-url: https://mouseonthekeys.github.io/mouse/
+url: https://nenadbubalo.com/
 # edit here to achieve your personal greatness
 # napisati nesto da se razlikuje
 baseurl: /mouse/
