--- a/_config.yml
+++ b/_config.yml
@@ -17,7 +17,7 @@ description: Nenad Bubalo - Mechanical Engineer personal homepage
 url: https://nenadbubalo.com
 # edit here to achieve your personal greatness
 # napisati nesto da se razlikuje
-baseurl: /mouse/
+#baseurl: /mouse/
 title: Nenad Bubalo
 author: Nenad Bubalo
 #description: Personal blog and resume
