add: linkedin link

--- a/_config.yml
+++ b/_config.yml
@@ -29,7 +29,7 @@ instagram: grumpyraccoon
 lastfm: MouseOnTheKeyz
 #dev: mouseonthekeys
 #twitter: username
-#linkedin: username
+linkedin: nenad-bubalo
 
 xing: Nenad_Bubalo
 stackoverflow: users/11832202/mouse-on-the-keys   #e.g: users/2735833/proton1h1
